Archive2/22/9ab26c95c56333/output
main.cpp: In constructor 'Point<T, Length>::Point(std::array<T, Length>)':
main.cpp:11:9: error: 'cout' was not declared in this scope
         cout << init[2] << endl;
         ^
main.cpp:11:28: error: 'endl' was not declared in this scope
         cout << init[2] << endl;
                            ^
